--- a/src/homepage.css
+++ b/src/homepage.css
@@ -20,7 +20,41 @@
     height: 100vh; /* Ensure the container takes up the full height of the viewport */
   }
   
-  .button-container {
+  .button-container{
     margin-top: 20px; /* Add some space between the heading and the button */
   }
+  .button-container button{
+    background-color: #fbeee0;
+  border: 2px solid #422800;
+  border-radius: 30px;
+  box-shadow: #422800 4px 4px 0 0;
+  color: #422800;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 18px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  }
+  .button-container button:hover {
+    background-color: #e09d55;
+  }
+  
+  .button-container button:active {
+    box-shadow: #422800 2px 2px 0 0;
+    transform: translate(2px, 2px);
+  }
+  
+  @media (min-width: 768px) {
+    .button-74 {
+      min-width: 120px;
+      padding: 0 25px;
+    }
+  }
+  
   
