--- a/src/homepage.css
+++ b/src/homepage.css
@@ -24,7 +24,7 @@
     margin-top: 20px; /* Add some space between the heading and the button */
   }
   .button-container button{
-    background-color: #fbeee0;
+    background-color:rgb(132, 211, 80);
   border: 2px solid #422800;
   border-radius: 30px;
   box-shadow: #422800 4px 4px 0 0;
